<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/apply_loan_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="108dp"
                    android:background="@drawable/waves_bg_light_pattern"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/img_loan_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_loan_status_apply" />
                </LinearLayout>

                <TextView
                    android:id="@+id/loan_status_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/apply_for_a_loan"
                    android:textAppearance="?textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/loan_status_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/repay_on_time_to_get_loans_up_to"
                    android:textAppearance="?textAppearanceBody1" />

                <Button
                    android:id="@+id/apply_loan_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/apply_now" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/due_loan_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ontrack_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/you_are_on_track"
                    android:textAppearance="?textAppearanceBody2"
                    app:layout_constraintBottom_toTopOf="@+id/loan_amount_due"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/loan_amount_due"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/amount_due"
                    android:textAppearance="?textAppearanceHeadline4"
                    app:layout_constraintBottom_toTopOf="@+id/loan_due_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ontrack_text" />

                <TextView
                    android:id="@+id/loan_due_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/due_date"
                    android:textAppearance="?textAppearanceHeadline5"
                    app:layout_constraintBottom_toTopOf="@+id/make_payment_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loan_amount_due" />

                <Button
                    android:id="@+id/make_payment_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/make_a_payment"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_how_to_repay"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loan_due_date" />

                <Button
                    android:id="@+id/btn_how_to_repay"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/how_to_repay"
                    app:layout_constraintBottom_toBottomOf="@+id/make_payment_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/make_payment_btn"
                    app:layout_constraintTop_toTopOf="@+id/make_payment_btn" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/my_tala_status"
                        android:textAppearance="?textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/progress_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:text="@string/grow_your_limit_up_to_s"
                        android:textAppearance="?textAppearanceBody1" />

                    <Button
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        android:text="@string/view_status"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/badge"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:src="@drawable/img_blue_badge_large" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:background="@color/white">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/story_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_story_card_ph" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/tala_helped_me_with_my_dream"
                    android:textAppearance="?textAppearanceHeadline6"
                    android:textColor="@color/white" />

                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/read_more"
                    android:textColor="@color/white" />

            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_email"
                    app:tint="@color/colorTeal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:text="@string/invite_friends_earn_money"
                    android:textAppearance="?textAppearanceBody1"
                    android:textStyle="bold" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_help" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:text="@string/view_faqs_or_send_us_a_message"
                    android:textAppearance="?textAppearanceBody1"
                    android:textStyle="bold" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</ScrollView>